--- a/style_footer.css
+++ b/style_footer.css
@@ -7,7 +7,7 @@ a:hover{
     width:100%;    
 }
 .bottom {
-    background-color: #111;
+    background-color: rgb(11,26,33);
 }
 .bottom .copyright {
     color: #e5e5e5;
