--- a/style_contacts_utiles.css
+++ b/style_contacts_utiles.css
@@ -1,10 +1,34 @@
-body, html {
-	font-family: 'Roboto';
+.img__description_layer {
+  position: absolute;
+  top: 1vw;
+  bottom: 1vw;
+  left: 1vw;
+  right: 1vw;
+  background: rgba(146,105,73,0.6);
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 5vh;
+  font-family: Crimson Text;
+
+    /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
 }
 
-@media (max-width: 768px) {
-.navbar-brand
-    {
-		transform: translateX(-25%) translateY(-5%);
-    }
+
+.img__wrap:hover .img__description_layer {
+  visibility: visible;
+  opacity: 1;
+}
+
+.img__description {
+  transition: .2s;
+  transform: translateY(1em);
+}
+
+.img__wrap:hover .img__description {
+  transform: translateY(0);
 }
