--- a/style_budget.css
+++ b/style_budget.css
@@ -1,3 +1,25 @@
+.btn-primary{
+	display:inline-block;
+	text-decoration:none;
+	background-color:#87593F;
+	color:white;
+	cursor:pointer;
+	font-family:Roboto,sans-serif;
+	font-size:20px;
+	line-height:50px;
+	text-align:center;
+	margin:0;
+	height:50px;
+	padding:0px 33px;
+	border-radius:7px;
+	max-width:100%;
+	white-space:nowrap;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	-webkit-font-smoothing:antialiased;
+	-moz-osx-font-smoothing:grayscale;
+}
+
 .btn-primary, .btn-primary:active, .btn:focus, .btn-primary:visited {
     background-color: rgb(11,26,33) !important;
     border:none;
