--- a/style_contacts_utiles.css
+++ b/style_contacts_utiles.css
@@ -11,8 +11,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 5vh;
-  font-family: Crimson Text;
+  font-size: 100%;
+  font-family: Roboto;
 
     /* transition effect. not necessary */
   transition: opacity .2s, visibility .2s;
